feat: add style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="app">
       <div class="boards">
         <div class="boards__item">
-          <span class="title" contenteditable="true"></span>
+          <span class="title" contenteditable="true">Введите название</span>
           <div class="list">
             <div class="list__item" draggable="true">Стартовая карточка</div>
           </div>
@@ -36,6 +36,7 @@
           <div class="add__btn"><span> + </span>Добавить карточку</div>
         </div>
       </div>
+      <div class="button">Добавить доску</div>
     </div>
     <script src="./scripts/main.js"></script>
   </body>
