feat: adding tasks

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
         <div class="boards__item">
           <span class="title" contenteditable="true">Введите название</span>
           <div class="list">
-            <div class="list__item" draggable="true">Стартовая карточка</div>
+            <div class="list__item" draggable="true">Пример таска</div>
           </div>
           <form class="form">
             <textarea
               class="textarea"
-              placeholder="Введите название для этой карточки"
+              placeholder="Введите название для этого таска"
             ></textarea>
 
             <div class="buttons">
-              <button class="add__item-btn">Добавить карточку</button>
+              <button class="add__item-btn">Добавить таск</button>
               <button class="cancel__item-btn">Отмена</button>
             </div>
           </form>
-          <div class="add__btn"><span> + </span>Добавить карточку</div>
+          <div class="add__btn"><span> + </span>Добавить таск</div>
         </div>
       </div>
       <div class="button">Добавить доску</div>
