feat: add function delete board and footer

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         </div>
       </div>
       <div class="button">Добавить доску</div>
+      <footer>
+        <p class="footer">&copy; Фогель Егор 2022</p>
+      </footer>
     </div>
     <script src="./scripts/main.js"></script>
   </body>
